--- a/product.html
+++ b/product.html
@@ -770,7 +770,14 @@
         >
       </div>
     </footer>
-
+    <div
+      ><a
+        class="github"
+        target="_blank"
+        href="https://github.com/towmie/Online-Shop"
+      ></a
+    ></div>
+    <!-- <button class="readme"></button> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="slick/slick.min.js"></script>
     <script src="js/main.js"></script>
